--- a/css/log_in.css
+++ b/css/log_in.css
@@ -14,10 +14,10 @@
       rgb(221.14, 236.94, 222.72) 71.67%,
       rgb(255, 255, 255) 98.41%
     );
-    max-width: 1850px; /* Adjusted to a maximum width */
+    max-width: 1850px; 
     width: 100%;
     height: 1024px;
-    margin: 0 auto; /* Centers the element horizontally */
+    margin: 0 auto; 
 }
 
 .sign-in .overlap {
@@ -182,7 +182,7 @@
   .sign-in .image-3 {
     position: absolute;
     width: 50px;
-    height: 50;
+    height: 50px;
     top: 18px;
     left: 934px;
   }
