--- a/css/logging.css
+++ b/css/logging.css
@@ -36,7 +36,7 @@
   
   .logging .rectangle {
     position: absolute;
-    width: 1440px;
+    width: 1403px;
     height: 934px;
     top: 90px;
     left: 0;
@@ -47,7 +47,7 @@
   
   .logging .div {
     position: absolute;
-    width: 1190px;
+    width: 1152px;
     height: 843px;
     top: 181px;
     left: 250px;
@@ -59,7 +59,7 @@
   
   .logging .rectangle-2 {
     position: absolute;
-    width: 1145px;
+    width: 1125px;
     height: 46px;
     top: 197px;
     left: 272px;
@@ -208,10 +208,10 @@
   
   .logging .lesspending {
     position: absolute;
-    width: 90px;
-    height: 72px;
+    width: 80px;
+    height: 70px;
     top: 112px;
-    left: 1331px;
+    left: 1329px;
   }
   
   .logging .line {
@@ -224,7 +224,7 @@
   
   .logging .rectangle-5 {
     position: absolute;
-    width: 1144px;
+    width: 1120px;
     height: 48px;
     top: 252px;
     left: 273px;
@@ -236,7 +236,7 @@
   
   .logging .rectangle-6 {
     position: absolute;
-    width: 1144px;
+    width: 1120px;
     height: 48px;
     top: 309px;
     left: 273px;
@@ -248,7 +248,7 @@
   
   .logging .rectangle-7 {
     position: absolute;
-    width: 1144px;
+    width: 1120px;
     height: 48px;
     top: 366px;
     left: 273px;
@@ -260,7 +260,7 @@
   
   .logging .rectangle-8 {
     position: absolute;
-    width: 1144px;
+    width: 1120px;
     height: 48px;
     top: 423px;
     left: 273px;
@@ -272,7 +272,7 @@
   
   .logging .rectangle-9 {
     position: absolute;
-    width: 1144px;
+    width: 1120px;
     height: 48px;
     top: 708px;
     left: 272px;
@@ -284,7 +284,7 @@
   
   .logging .rectangle-10 {
     position: absolute;
-    width: 1144px;
+    width: 1120px;
     height: 48px;
     top: 765px;
     left: 272px;
@@ -296,7 +296,7 @@
   
   .logging .rectangle-11 {
     position: absolute;
-    width: 1144px;
+    width: 1120px;;
     height: 48px;
     top: 822px;
     left: 272px;
@@ -308,7 +308,7 @@
   
   .logging .rectangle-12 {
     position: absolute;
-    width: 1144px;
+    width: 1120px;
     height: 48px;
     top: 879px;
     left: 272px;
@@ -320,7 +320,7 @@
   
   .logging .rectangle-13 {
     position: absolute;
-    width: 1144px;
+    width: 1120px;
     height: 48px;
     top: 936px;
     left: 272px;
@@ -332,7 +332,7 @@
   
   .logging .rectangle-14 {
     position: absolute;
-    width: 1144px;
+    width: 1120px;
     height: 48px;
     top: 480px;
     left: 273px;
@@ -344,7 +344,7 @@
   
   .logging .rectangle-15 {
     position: absolute;
-    width: 1144px;
+    width: 1120px;
     height: 48px;
     top: 537px;
     left: 273px;
@@ -356,7 +356,7 @@
   
   .logging .rectangle-16 {
     position: absolute;
-    width: 1144px;
+    width: 1120px;
     height: 48px;
     top: 594px;
     left: 273px;
@@ -368,7 +368,7 @@
   
   .logging .rectangle-17 {
     position: absolute;
-    width: 1144px;
+    width: 1120px;
     height: 48px;
     top: 651px;
     left: 273px;
@@ -380,7 +380,7 @@
   
   .logging .img {
     position: absolute;
-    width: 1440px;
+    width: 1406px;
     height: 2px;
     top: 88px;
     left: 0;
