--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@
 
 .HOME-lesspending .line {
   position: absolute;
-  width: 1800px;
+  width: 1440px;
   height: 2px;
   top: 30px;
   left: 50%;
@@ -92,9 +92,9 @@
   position: absolute;
   width: 109px;
   height: 23px;
-  top: 18px;
-  left: 291px;
-  font-family: "Kiwi Maru-Medium", sans-serif;
+  top: 12px;
+  left: 55px;
+  font-family: 'Kiwi Maru', sans-serif;
   font-weight: 500;
   color: #000000;
   font-size: 20px;
@@ -105,81 +105,84 @@
 
 .HOME-lesspending .text-wrapper-2 {
   position: absolute;
-  width: 125px;
-  height: 27px;
-  top: 16px;
-  left: 521px;
+  width: 109px;
+  height: 23px;
+  top: 12px;
+  left: 55px;
   font-family: 'Kiwi Maru', sans-serif;
   font-weight: 500;
   color: #000000;
   font-size: 20px;
   letter-spacing: 0;
   line-height: normal;
+  white-space: nowrap;
 }
 
 .HOME-lesspending .text-wrapper-3 {
   position: absolute;
-  width: 138px;
-  height: 27px;
-  top: 16px;
-  left: 751px;
+  width: 109px;
+  height: 23px;
+  top: 12px;
+  left: 48px;
   font-family: 'Kiwi Maru', sans-serif;
   font-weight: 500;
   color: #000000;
   font-size: 20px;
   letter-spacing: 0;
   line-height: normal;
+  white-space: nowrap;
 }
 
 .HOME-lesspending .text-wrapper-4 {
   position: absolute;
-  width: 97px;
-  height: 27px;
-  top: 16px;
-  left: 1009px;
+  width: 109px;
+  height: 23px;
+  top: 12px;
+  left: 55px;
   font-family: 'Kiwi Maru', sans-serif;
   font-weight: 500;
   color: #000000;
   font-size: 20px;
   letter-spacing: 0;
   line-height: normal;
+  white-space: nowrap;
 }
 
 .HOME-lesspending .image {
-  left: 413px;
+  right: 0px;
   position: absolute;
-  width: 50px;
+  width: 70px;
   height: 25px;
   top: 19px;
 }
 
 .HOME-lesspending .img {
-  left: 651px;
+  right: 0px;
   position: absolute;
-  width: 50px;
+  width: 70px;
   height: 25px;
   top: 19px;
 }
 
 .HOME-lesspending .image-2 {
-  left: 889px;
+  right: 0px;
   position: absolute;
-  width: 50px;
+  width: 70px;
   height: 25px;
   top: 19px;
 }
 
 .HOME-lesspending .image-3 {
-  left: 1128px;
+  right: 0px;
   position: absolute;
-  width: 50px;
+  width: 70px;
   height: 25px;
   top: 19px;
 }
 
 .HOME-lesspending .overlap-2 {
   position: absolute;
-  width: 1789px;
+  width: 1440px;
   height: 201px;
   top: 2536px;
   left: 50%;
@@ -241,15 +244,15 @@
 
 .HOME-lesspending .element {
   height: 119px;
-  top: 76px;
-  left: 1540px;
-  position: absolute;
-  width: 243px;
+    top: 76px;
+    left: 1170px;
+    position: absolute;
+    width: 243px;
 }
 
 .HOME-lesspending .line-2 {
   position: absolute;
-  width: 1800px;
+  width: 1440px;
   height: 2px;
   top: 1119px;
   left: 50%;
@@ -259,7 +262,7 @@
 
 .HOME-lesspending .line-3 {
   position: absolute;
-  width: 1800px;
+  width: 1440px;
   height: 2px;
   top: 1831px;
   left: 50%;
@@ -277,49 +280,53 @@
 
 .HOME-lesspending .rectangle-5 {
   position: absolute;
-  width: 1780px;
+  width: 1440px;
   height: 92px;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
   background-color: #a7c5aa;
+  border: 2px solid;
+  border-color: #000000;
 }
 
 
 .HOME-lesspending .line-4 {
   position: absolute;
-  width: 1780px;
+  width: 1440x;
   height: 2px;
   top: 89px;
-  left: 50%;
   transform: translateX(-50%);
 }
 
 
 .HOME-lesspending .text-wrapper-6 {
   position: absolute;
-  width: 147px;
   top: 32px;
-  left: 1230px;
+  right: 210px;
   font-family: 'Kiwi Maru', sans-serif;
   font-weight: 500;
   color: #000000;
   font-size: 20px;
   letter-spacing: 0;
   line-height: normal;
+  background-color: #a7c5aa;
+  border: 0px solid;
 }
 
 .HOME-lesspending .text-wrapper-7 {
   position: absolute;
   width: 124px;
   top: 32px;
-  left: 1450px;
+  right: 30px;
   font-family: 'Kiwi Maru', sans-serif;
   font-weight: 500;
   color: #000000;
   font-size: 20px;
   letter-spacing: 0;
   line-height: normal;
+  background-color: #a7c5aa;
+  border: 0px solid;
 }
 
 .HOME-lesspending .line-5 {
@@ -327,7 +334,7 @@
   width: 2px;
   height: 90px;
   top: 0;
-  left: 130px;
+  left: 240px;
 }
 
 .HOME-lesspending .line-11 {
@@ -340,10 +347,10 @@
 
 .HOME-lesspending .element-2 {
   position: absolute;
-    width: 243px;
-    height: 103px;
-    top: 0;
-    left: -10%;
+    width: 190px;
+    height: 100px;
+    top: 4px;
+    left: 30px;
 }
 
 .HOME-lesspending .line-6 {
@@ -351,7 +358,7 @@
   width: 2px;
   height: 92px;
   top: 0;
-  left: 1410px;
+  right: 180px;
 }
 
 .HOME-lesspending .line-7 {
@@ -359,7 +366,7 @@
   width: 2px;
   height: 92px;
   top: 0;
-  right: 250px;
+  right: 385px;
 }
 
 .HOME-lesspending .overlap-4 {
@@ -385,8 +392,8 @@
   position: absolute;
   width: 173px;
   height: 19px;
-  top: 40px;
-  left: 23px;
+  top: 0;
+  left: 12px;
   font-family: "Kiwi Maru", sans-serif;
   font-weight: 400;
   color: #000000;
@@ -486,7 +493,7 @@
   position: absolute;
   width: 574px;
   height: 215px;
-  top: 1246px;
+  top: 1276px;
   left: 188px;
   font-family: 'Kiwi Maru', sans-serif;
   font-weight: 400;
