--- a/css/mis_ingresos.css
+++ b/css/mis_ingresos.css
@@ -76,9 +76,10 @@
   .mi-perfil-MIS-INGRESOS .image {
     position: absolute;
     width: 50px;
-    height: 50px;
+    height: 40px;
     top: 19px;
-    left: 935px;
+    left: 933px;
+    cursor: pointer;
   }
   
   .mi-perfil-MIS-INGRESOS .text-wrapper {
@@ -123,7 +124,7 @@
   
   .mi-perfil-MIS-INGRESOS .div {
     top: 231px;
-    left: 53px;
+    left: 3px;
     position: absolute;
     width: 202px;
     font-family: 'Kiwi Maru', sans-serif;
@@ -132,11 +133,13 @@
     font-size: 20px;
     letter-spacing: 0;
     line-height: normal;
+    background-color: #ffffff00;
+    border: 0px;
   }
   
   .mi-perfil-MIS-INGRESOS .text-wrapper-2 {
-    top: 329px;
-    left: 51px;
+    top: 328px;
+    left: 17px;
     position: absolute;
     width: 202px;
     font-family: 'Kiwi Maru', sans-serif;
@@ -145,6 +148,8 @@
     font-size: 20px;
     letter-spacing: 0;
     line-height: normal;
+    background-color: #ffffff00;
+    border: 0px;
   }
   
   .mi-perfil-MIS-INGRESOS .text-wrapper-3 {
@@ -200,8 +205,8 @@
   }
   
   .mi-perfil-MIS-INGRESOS .text-wrapper-7 {
-    top: 282px;
-    left: 51px;
+    top: 280px;
+    left: 8px;
     position: absolute;
     width: 202px;
     font-family: 'Kiwi Maru', sans-serif;
@@ -210,6 +215,8 @@
     font-size: 20px;
     letter-spacing: 0;
     line-height: normal;
+    background-color: #ffffff00;
+    border: 0px;
   }
   
   .mi-perfil-MIS-INGRESOS .ellipse {
@@ -233,7 +240,7 @@
   
   .mi-perfil-MIS-INGRESOS .text-wrapper-8 {
     position: absolute;
-    width: 197px;
+    width: 230px;
     top: 204px;
     left: 594px;
     font-family: 'Kiwi Maru', sans-serif;
@@ -242,6 +249,7 @@
     font-size: 36px;
     letter-spacing: 0;
     line-height: normal;
+    border: 0px;
   }
   
   .mi-perfil-MIS-INGRESOS .vector-4 {
@@ -360,4 +368,13 @@
     height: 26px;
     top: 335px;
     left: 328px;
+  }
+
+  .custom-button {
+    display: flex;
+    align-items: left;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
   }
