--- a/css/usuarios.css
+++ b/css/usuarios.css
@@ -207,20 +207,25 @@
     line-height: normal;
   }
   
-  .usuarios .text-wrapper-10 {
-    width: 165px;
-    top: 307px;
-    left: 43px;
-    font-size: 20px;
-    text-align: center;
-    position: absolute;
-    height: 38px;
-    font-family: 'Kiwi Maru', sans-serif;
-    font-weight: 500;
-    color: #404040;
-    letter-spacing: 0;
-    line-height: normal;
-  }
+  .custom-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+  .subscription-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffffff;
+    color: #000000;
+    border: none;
+    cursor: pointer;
+}
+
   
   .usuarios .rectangle-4 {
     position: absolute;
@@ -250,14 +255,14 @@
   }
   
   .usuarios .text-wrapper-12 {
-    width: 126px;
-    top: 128px;
-    left: 1240px;
-    color: #000000;
-    font-size: 20px;
     position: absolute;
+    width: 126px;
+    top: 125px;
+    right: 80px;
     font-family: 'Kiwi Maru', sans-serif;
     font-weight: 500;
+    color: #000000;
+    font-size: 16px;
     letter-spacing: 0;
     line-height: normal;
   }
@@ -284,22 +289,28 @@
     height: 48px;
     top: 252px;
     left: 273px;
-    background-color: #d9d9d9;
+    background-color: #F3FAF3;
     border: 1px solid;
-    border-color: #000000;
-    mix-blend-mode: soft-light;
-  }
-  
+    border-color: #F3FAF3;
+    z-index: 1;
+    font-family: 'Kiwi Maru', sans-serif;
+    font-weight: 500;
+    color: #000000;
+}
+
   .usuarios .rectangle-6 {
     position: absolute;
     width: 1122px;
     height: 48px;
     top: 309px;
     left: 273px;
-    background-color: #d9d9d9;
+    background-color: #F3FAF3;
     border: 1px solid;
-    border-color: #000000;
-    mix-blend-mode: soft-light;
+    border-color: #F3FAF3;
+    z-index: 1;
+    font-family: 'Kiwi Maru', sans-serif;
+    font-weight: 500;
+    color: #000000;
   }
   
   .usuarios .rectangle-7 {
@@ -308,10 +319,13 @@
     height: 48px;
     top: 366px;
     left: 273px;
-    background-color: #d9d9d9;
+    background-color: #F3FAF3;
     border: 1px solid;
-    border-color: #000000;
-    mix-blend-mode: soft-light;
+    border-color: #F3FAF3;
+    z-index: 1;
+    font-family: 'Kiwi Maru', sans-serif;
+    font-weight: 500;
+    color: #000000;
   }
   
   .usuarios .rectangle-8 {
@@ -320,10 +334,13 @@
     height: 48px;
     top: 423px;
     left: 273px;
-    background-color: #d9d9d9;
+    background-color: #F3FAF3;
     border: 1px solid;
-    border-color: #000000;
-    mix-blend-mode: soft-light;
+    border-color: #F3FAF3;
+    z-index: 1;
+    font-family: 'Kiwi Maru', sans-serif;
+    font-weight: 500;
+    color: #000000;
   }
   
   .usuarios .rectangle-9 {
@@ -332,10 +349,13 @@
     height: 48px;
     top: 708px;
     left: 272px;
-    background-color: #d9d9d9;
+    background-color: #F3FAF3;
     border: 1px solid;
-    border-color: #000000;
-    mix-blend-mode: soft-light;
+    border-color: #F3FAF3;
+    z-index: 1;
+    font-family: 'Kiwi Maru', sans-serif;
+    font-weight: 500;
+    color: #000000;
   }
   
   .usuarios .rectangle-10 {
@@ -344,10 +364,13 @@
     height: 48px;
     top: 765px;
     left: 272px;
-    background-color: #d9d9d9;
+    background-color: #F3FAF3;
     border: 1px solid;
-    border-color: #000000;
-    mix-blend-mode: soft-light;
+    border-color: #F3FAF3;
+    z-index: 1;
+    font-family: 'Kiwi Maru', sans-serif;
+    font-weight: 500;
+    color: #000000;
   }
   
   .usuarios .rectangle-11 {
@@ -356,10 +379,13 @@
     height: 48px;
     top: 822px;
     left: 272px;
-    background-color: #d9d9d9;
+    background-color: #F3FAF3;
     border: 1px solid;
-    border-color: #000000;
-    mix-blend-mode: soft-light;
+    border-color: #F3FAF3;
+    z-index: 1;
+    font-family: 'Kiwi Maru', sans-serif;
+    font-weight: 500;
+    color: #000000;
   }
   
   .usuarios .rectangle-12 {
@@ -368,10 +394,13 @@
     height: 48px;
     top: 879px;
     left: 272px;
-    background-color: #d9d9d9;
+    background-color: #F3FAF3;
     border: 1px solid;
-    border-color: #000000;
-    mix-blend-mode: soft-light;
+    border-color: #F3FAF3;
+    z-index: 1;
+    font-family: 'Kiwi Maru', sans-serif;
+    font-weight: 500;
+    color: #000000;
   }
   
   .usuarios .rectangle-13 {
@@ -380,10 +409,13 @@
     height: 48px;
     top: 936px;
     left: 272px;
-    background-color: #d9d9d9;
+    background-color: #F3FAF3;
     border: 1px solid;
-    border-color: #000000;
-    mix-blend-mode: soft-light;
+    border-color: #F3FAF3;
+    z-index: 1;
+    font-family: 'Kiwi Maru', sans-serif;
+    font-weight: 500;
+    color: #000000;
   }
   
   .usuarios .rectangle-14 {
@@ -392,10 +424,13 @@
     height: 48px;
     top: 480px;
     left: 273px;
-    background-color: #d9d9d9;
+    background-color: #F3FAF3;
     border: 1px solid;
-    border-color: #000000;
-    mix-blend-mode: soft-light;
+    border-color: #F3FAF3;
+    z-index: 1;
+    font-family: 'Kiwi Maru', sans-serif;
+    font-weight: 500;
+    color: #000000;
   }
   
   .usuarios .rectangle-15 {
@@ -404,10 +439,13 @@
     height: 48px;
     top: 537px;
     left: 273px;
-    background-color: #d9d9d9;
+    background-color: #F3FAF3;
     border: 1px solid;
-    border-color: #000000;
-    mix-blend-mode: soft-light;
+    border-color: #F3FAF3;
+    z-index: 1;
+    font-family: 'Kiwi Maru', sans-serif;
+    font-weight: 500;
+    color: #000000;
   }
   
   .usuarios .rectangle-16 {
@@ -416,10 +454,13 @@
     height: 48px;
     top: 594px;
     left: 273px;
-    background-color: #d9d9d9;
+    background-color: #F3FAF3;
     border: 1px solid;
-    border-color: #000000;
-    mix-blend-mode: soft-light;
+    border-color: #F3FAF3;
+    z-index: 1;
+    font-family: 'Kiwi Maru', sans-serif;
+    font-weight: 500;
+    color: #000000;
   }
   
   .usuarios .rectangle-17 {
@@ -428,10 +469,13 @@
     height: 48px;
     top: 651px;
     left: 273px;
-    background-color: #d9d9d9;
+    background-color: #F3FAF3;
     border: 1px solid;
-    border-color: #000000;
-    mix-blend-mode: soft-light;
+    border-color: #F3FAF3;
+    z-index: 1;
+    font-family: 'Kiwi Maru', sans-serif;
+    font-weight: 500;
+    color: #000000;
   }
   
   .usuarios .img {
@@ -468,14 +512,26 @@
   
   .usuarios .text-wrapper-13 {
     position: absolute;
-    width: 51px;
-    top: 31px;
-    left: 1323px;
+    height: 92px;
+    width: 156px;
+    top: 0px;
+    left: 1256px;
     font-family: 'Kiwi Maru', sans-serif;
     font-weight: 500;
     color: #000000;
     font-size: 20px;
     letter-spacing: 0;
     line-height: normal;
+    background-color: #a7c6aa;
+    border: 2px solid;
+    border-color: #000000;
+    cursor: pointer;
   }
   
+  .registrar-gasto .overlap-5 {
+    position: absolute;
+    width: 181px;
+    height: 72px;
+    top: 125px;
+    left: 1213px;
+  }
