--- a/css/registrar_gastos.css
+++ b/css/registrar_gastos.css
@@ -735,8 +735,7 @@
   }
 
   
-  
-  .registrar-gasto .nombre {
+  .registrar-gasto .rectangle-20 {
     position: absolute;
     width: 200px;
     height: 45px;
